| Bug #59756 | NDB tables 'ghosted' if CREATE TABLE fails due to too many fragments error | ||
|---|---|---|---|
| Submitted: | 26 Jan 2011 18:48 | Modified: | 28 Jan 2011 15:12 |
| Reporter: | Daniel Smythe | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Cluster: Cluster (NDB) storage engine | Severity: | S3 (Non-critical) |
| Version: | 7.1.9 | OS: | Any |
| Assigned to: | Jonas Oreland | CPU Architecture: | Any |
| Tags: | cluster, create, Failure, Fragments, ghost | ||
[26 Jan 2011 18:48]
Daniel Smythe
[27 Jan 2011 13:27]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/129762 4144 Jonas Oreland 2011-01-27 ndb - bug#59756 - Don't put table into global cache until schema trans has been successfully committed. Add interface to get ObjectId back from createTable()
[27 Jan 2011 13:34]
Bugs System
Pushed into mysql-5.1-telco-7.0 5.1.51-ndb-7.0.22 (revid:jonas@mysql.com-20110127133104-xkuu2x79cxsu5abh) (version source revid:jonas@mysql.com-20110127132307-08gtx11qhcoqpsb2) (merge vers: 5.1.51-ndb-7.0.22) (pib:24)
[27 Jan 2011 14:12]
Bugs System
Pushed into mysql-5.1-telco-7.0 5.1.51-ndb-7.0.22 (revid:jonas@mysql.com-20110127140839-yzcmimmoqef56rmp) (version source revid:jonas@mysql.com-20110127140839-yzcmimmoqef56rmp) (merge vers: 5.1.51-ndb-7.0.22) (pib:24)
[27 Jan 2011 14:13]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/129778 4146 Jonas Oreland 2011-01-27 ndb - (bug#59756) latest patch revealed the setTemporary does not work...which it doesnt...but was previously silently ignored..but now is brought to light
[27 Jan 2011 15:03]
Frazer Clement
Comments sent via email
[28 Jan 2011 10:33]
Jonas Oreland
pushed into 7.0.22 and 7.1.11
[28 Jan 2011 15:10]
Jon Stephens
Documented fix in the NDB-7.0.22 and 7.1.11 changelogs, as follows:
When a CREATE TABLE statement failed due to NDB error 1224 (Too
many fragments), it was not possible to create the table
afterward unless it had no ordered indexes, or a DROP TABLE was
issued first, even if the subsequent CREATE TABLE was valid.
Closed.
